Name:                diagrams
Version:             0.5
Synopsis:            Embedded domain-specific language for declarative vector graphics
Description:         Diagrams is a full-featured framework and embedded domain-specific langauge for creating
                     declarative vector graphics and animations.
                     .
                     This package is just a convenient wrapper
                     around the @diagrams-core@, @diagrams-lib@ and
                     @diagrams-contrib@ packages, so they can be
                     installed with a single `cabal install diagrams`
                     command.
                     .
                     The package also comes with flags to enable two
                     different backends.  The cairo/gtk
                     backend (the @diagrams-cairo@ package)
                     can be selected with the @-fcairo@ flag.  This
                     flag is enabled by default, so if you do /not/
                     want the cairo/gtk backend, you must explicitly
                     disable it with @-f-cairo@.
                     . 
                     There is also an experimental native SVG
                     backend (the @diagrams-svg@ package)
                     which can be enabled with @-fsvg@.
                     .
                     For more information, including a gallery of
                     examples, tutorial, and user manual, see the
                     diagrams website:
                     <http://projects.haskell.org/diagrams>.  For
                     help, join the @#diagrams@ IRC channel on
                     Freenode or the mailing list:
                     <http://groups.google.com/group/diagrams-discuss>.
Homepage:            http://projects.haskell.org/diagrams
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10

Source-repository head
  type:     git
  location: git://github.com/diagrams/diagrams.git

Flag cairo
  Description: Enable the cairo backend
  Default: True
  
Flag svg
  Description: Enable the Haskell-native SVG backend (experimental)
  Default: False

Library
  Build-depends:     diagrams-core >= 0.5 && < 0.6,
                     diagrams-lib >= 0.5 && < 0.6,
                     diagrams-contrib >= 0.2 && < 0.3

  if flag(cairo)
    Build-depends:   diagrams-cairo >= 0.5 && < 0.6

  if flag(svg)
    Build-depends:   diagrams-svg >= 0.3.7 && < 0.4

  Default-language:  Haskell2010