Name:                diagrams
Version:             1.4.1
Synopsis:            Embedded domain-specific language for declarative vector graphics
Description:         Diagrams is a full-featured framework and embedded domain-specific langauge for creating
                     declarative vector graphics and animations.
                     .
                     This package is just a convenient wrapper
                     around the @diagrams-core@, @diagrams-lib@ and
                     @diagrams-contrib@ packages, so they can be
                     installed with a single @cabal install diagrams@
                     command.
                     .
                     The package also comes with flags to enable six
                     different backends.
                     A Haskell-native SVG
                     backend (the @diagrams-svg@ package)
                     can be selected with @-fsvg@. This
                     flag is enabled by default, so if you do /not/
                     want the SVG backend, you must explicitly
                     disable it with @-f-svg@.  The SVG backend does not
                     yet quite support all the features of the cairo
                     backend: text alignment and embedded images are
                     the two main missing features at this point, and
                     of course it can only produce SVG images. It is,
                     however, much easier to install, so it is the
                     out-of-the-box default.
                     .
                     There is also a cairo backend (the
                     @diagrams-cairo@ package) which can be selected
                     with the @-fcairo@ flag. It is fully-featured and
                     can produce PNG, PS, PDF, SVG, or animated
                     GIF output; however,
                     due to its dependencies it can be difficult to
                     install on some platforms (notably OS X).
                     .
                     In addition, there is a GTK backend based on the
                     cairo backend, for rendering diagrams directly to
                     GTK windows. You can enable it with the @-fgtk@ flag.
                     .
                     The Haskell-native postscript
                     backend (the @diagrams-postscript@ package)
                     can be selected with the @-fpostscript@ flag.  The only
                     feature it does not support is transparency.
                     .
                     There is a Rasterific backend which is
                     also Haskell-native (the @diagrams-rasterific@
                     package) which can be selected with the @-frasterific@
                     flag. This is a fully featured backend with the ability
                     to produce PNG, JPG, TIFF, BMP and animated GIF output.
                     .
                     There is a Canvas backend, also haskell native,
                     which can be selected with the @-fcanvas@ flag. This
                     backend allows users to write interactive images onto
                     their web browsers.
                     .
                     Finally there is a PGF backend, suitable for producing
                     diagrams that can be natively embedded in LaTeX documents,
                     which can be selected with the @-fpgf@ flag.
                     .
                     For more information, including a gallery of
                     examples, tutorial, and user manual, see the
                     diagrams website:
                     <http://diagrams.github.io>.  For
                     help, join the @#diagrams@ IRC channel on
                     Freenode or the mailing list:
                     <http://groups.google.com/group/diagrams-discuss>.
Homepage:            http://diagrams.github.io
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       1.18
tested-with:         GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.5 || ==9.6.1
Extra-source-files:  README.markdown
extra-doc-files:     CHANGES.md

Source-repository head
  type:     git
  location: git://github.com/diagrams/diagrams.git

Flag cairo
  Description: Enable the cairo backend
  Default: False
  Manual:  True

Flag gtk
  Description: Enable the GTK backend
  Default: False
  Manual:  True

Flag svg
  Description: Enable the Haskell-native SVG backend
  Default: True
  Manual:  True

Flag ps
  Description: Enable the Haskell-native PostScript backend
  Default: False
  Manual: True

Flag postscript
  Description: Enable the Haskell-native PostScript backend
  Default: False
  Manual: True

Flag rasterific
  Description: Enable the Haskell-native Rasterific backend
  Default: False
  Manual: True

Flag canvas
  Description: Enable the Haskell-native Canvas backend
  Default: False
  Manual: True

Flag pgf
  Description: Enable the Haskell-native PGF backend
  Default: False
  Manual: True

Library
  Build-depends:     diagrams-core >= 1.4 && < 1.6,
                     diagrams-lib >= 1.4 && < 1.5,
                     diagrams-contrib >= 1.4 && < 1.5

  if flag(cairo)
    Build-depends:   diagrams-cairo >= 1.4 && < 1.5

  if flag(gtk)
    Build-depends:   diagrams-gtk >= 1.4 && < 1.5

  if flag(svg)
    Build-depends:   diagrams-svg >= 1.4 && < 1.5

  if flag(ps) || flag(postscript)
    Build-depends:   diagrams-postscript >= 1.4 && < 1.6

  if flag(rasterific)
    Build-depends:   diagrams-rasterific >= 1.4 && < 1.5

  if flag(canvas)
    Build-depends:   diagrams-canvas >= 1.4 && < 1.5

  if flag(pgf)
    Build-depends:   diagrams-pgf >= 1.4 && < 1.5

  Default-language:  Haskell2010
